added avoid parameter
